# antastorga.github.io

./: .gitignore  Makefile  README.md  devotional-week.html  devotional.html  index.html  main.py  pyproject.toml  scrap.py  test.py
.github/workflows/: eachday.yml  eachmonth.yml  eachweek.yml
main/: Devociones del 10 al 16 de Octubre.html  Devociones del 19 al 25 de Diciembre.html  Devociones del 21 al 27 de Noviembre.html  Devoción del Miércoles 21 de Setiembre.html  Devoción del Viernes 23 de Setiembre.html  index.html
main/2022-10-02/: Devociones del 3 al 9 de Octubre.html
main/2022-10-16/: Devociones del 17 al 23 de Octubre.html
main/2022-10-30/: Devociones del 24 al 30 de Octubre.html  Devociones del 31 al 6 de Noviembre.html
main/2022-11-06/: Devociones del 7 al 13 de Noviembre.html
main/2022-11-13/: Devociones del 14 al 20 de Noviembre.html
main/2022-11-27/: Devociones del 28 al 4 de Diciembre.html
main/2022-12-04/: Devociones del 12 al 18 de Diciembre.html
main/2022-12-26/: Devociones del 2 al 8 de Enero.html
main/2022-12-31/: Devociones del 2 al 8 de Enero.html
main/2023-01-01/: Devociones del 26 al 1 de Enero.html
main/2023-01-07/: Devociones del 9 al 15 de Enero.html
main/2023-01-14/: Devociones del 16 al 22 de Enero.html
main/2023-01-21/: Devociones del 23 al 29 de Enero.html
main/2023-01-28/: Devociones del 30 al 5 de Febrero.html
main/2023-02-04/: Devociones del 6 al 12 de Febrero.html
scripts/: commit-docs  convert  current  help  nextweek  today
templates/: devotional.html.j2
(+115 files in other folders)
