[tool.poetry]
name = "scrap"
version = "0.1.0"
description = ""
authors = ["William Astorga <wastorga@altus.co.cr>"]

[tool.poetry.dependencies]
python = "^3.7"
bs4 = "^0.0.1"
selenium = "^4.1.5"
webdriver-manager = "^3.5.4"
Jinja2 = "^3.1.2"
weasyprint = "^55.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
