[tool.poetry]
name = "scrap-odb"
version = "1.0.0"
description = "web scrapper for odb in spanish"
authors = ["William Astorga <waastorgac@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.0"
selenium = "^4.23.1"
webdriver-manager = "^4.0.2"
Jinja2 = "^3.1.6"
weasyprint = "^62.0"
pdfkit = "^1.0.0"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
